--- a/src/main/resources/templates/group.html
+++ b/src/main/resources/templates/group.html
@@ -230,7 +230,7 @@
                                             </button>
                                         </div>
                                     </div>
-                                    <div class="commentsList" style="display: none; margin-top: 10px;">
+                                    <div class="commentsList" style="display: none; margin-top: 0px;">
                                         <!--<hr class="block_line"
                                             style="margin-left: 0px; width: 526px; margin-top: 20px; margin-bottom: -5px;"/>-->
                                         <div th:each="comment : ${comments}">
@@ -246,7 +246,7 @@
                                                                 <div class="row"
                                                                      th:if="${comment.getIdComments() == 0}">
                                                                     <hr class="block_line"
-                                                                        style="margin-left: 0px; width: 538px; margin-top: 5px; margin-bottom: -5px;"/>
+                                                                        style="margin-left: 0px; width: 538px; margin-top: 15px; margin-bottom: -5px;"/>
                                                                     <div class="col-2" style="margin-top: 15px;">
                                                                         <img class="figure_img_comment_item_list"
                                                                              alt="image" th:src="${userC.getImg()}"/>
@@ -261,28 +261,29 @@
                                                                         </div>
                                                                         <div class="row">
                                                                             <div class="col align-self-center"
-                                                                                 style="width: 250px; white-space: nowrap;">
+                                                                                 style="width: 400px; white-space: nowrap;">
                                                                                 <p class="date_p_comment_item_list p-text-color" th:text="${comment.getDate()}"></p>
                                                                                 <script th:inline="javascript">
                                                                                     getDateFormatForComments([[${comment.getDate()}]]);
                                                                                 </script>
                                                                             </div>
 
-                                                                            <div class="col align-self-center"
-                                                                                 style=" width: 45px; margin-top: -33px; margin-left: 5px;">
-                                                                                <button class="btn no-button c-button" th:onclick="'answer(\'' + ${comment.getId()} + '\');'">
+
+                                                                            <div style="width: 50px; height: 10px; margin-top: 0px; margin-left: -70px; white-space: nowrap; background: rgba(0, 0, 0, 0);">
+                                                                                <!--Кнопка ответить и лайки!!!-->
+                                                                                <button class="btn no-button c-button" th:onclick="'answer(\'' + ${comment.getId()} + '\');'" >
                                                                                     <p class="p-text-color"
-                                                                                       style="font-size: 12px; margin-top: -15px; color: var(--main-color);">Ответить</p>
+                                                                                       style="font-size: 12px; margin-top: -65px; margin-left: -280px; color: var(--main-color);">Ответить</p>
                                                                                 </button>
+
+                                                                                <div style="margin-top: -113px;">
+                                                                                    <i class="fa-regular fa-heart"
+                                                                                       style="color: var(--main-color); margin-top: 0px; margin-left: 95px;"></i>
+                                                                                    <label style="width: fit-content; font-size: 12px; margin-top: 0px; color: var(--main-color);"
+                                                                                           th:text="${comment.getLikes()}"></label>
+                                                                                </div>
                                                                             </div>
 
-                                                                            <div class="col align-self-center"
-                                                                                 style="width: 50px; margin-top: -35px; margin-left: 5px; white-space: nowrap">
-                                                                                <i class="fa-regular fa-heart"
-                                                                                   style="color: var(--main-color); margin-top: 5px;"></i>
-                                                                                <label style="width: fit-content; font-size: 12px; margin-top: -23px; color: var(--main-color);"
-                                                                                       th:text="${comment.getLikes()}"></label>
-                                                                            </div>
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -316,20 +317,19 @@
                                                                                                 </script>
                                                                                             </div>
 
-                                                                                            <div class="col align-self-center"
-                                                                                                 style=" width: 45px; margin-top: -33px; margin-left: 5px;">
-                                                                                                <button class="btn no-button c-button" th:onclick="'answer(\'' + ${comment.getId()} + '\');'">
+                                                                                            <div style="width: 50px; height: 10px; margin-top: 0px; margin-left: -104px; white-space: nowrap; background: rgba(0, 0, 0, 0);">
+                                                                                                <!--Кнопка ответить и лайки!!!-->
+                                                                                                <button class="btn no-button c-button" th:onclick="'answer(\'' + ${comment.getId()} + '\');'" >
                                                                                                     <p class="p-text-color"
-                                                                                                       style="font-size: 12px; margin-top: -15px; color: var(--main-color);">Ответить</p>
+                                                                                                       style="font-size: 12px; margin-top: -65px; margin-left: -280px; color: var(--main-color);">Ответить</p>
                                                                                                 </button>
-                                                                                            </div>
 
-                                                                                            <div class="col align-self-center"
-                                                                                                 style="width: 50px; margin-top: -35px; margin-left: 40px; white-space: nowrap">
-                                                                                                <i class="fa-regular fa-heart"
-                                                                                                   style="color: var(--main-color); margin-top: 5px;"></i>
-                                                                                                <label style="width: fit-content; font-size: 12px; margin-top: -23px; color: var(--main-color);"
-                                                                                                       th:text="${subComment.getLikes()}"></label>
+                                                                                                <div style="margin-top: -113px;">
+                                                                                                    <i class="fa-regular fa-heart"
+                                                                                                       style="color: var(--main-color); margin-top: 0px; margin-left: 95px;"></i>
+                                                                                                    <label style="width: fit-content; font-size: 12px; margin-top: 0px; color: var(--main-color);"
+                                                                                                           th:text="${comment.getLikes()}"></label>
+                                                                                                </div>
                                                                                             </div>
                                                                                         </div>
                                                                                         <!--<hr class="block_line"
