public post with a few image :')

--- a/src/main/resources/static/css/group.css
+++ b/src/main/resources/static/css/group.css
@@ -78,3 +78,14 @@ input[type="file"] {
     transform: translate(-50%,-50%);
 }
 
+article {
+    width: 80%;
+    margin: auto;
+    margin-top: 10px;
+}
+
+.thumbnail {
+    height: 100px;
+    margin: 10px;
+}
+
