--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -89,7 +89,7 @@
     <div class="row row-cols-auto">
         <div class="col-2">
             <!--Что-то-->
-            <div class="block_div"
+            <div class="block_div" th:if="${userLogin!=null}"
                  style="margin-top: 50px; margin-left: 0px; width: 230px; height: 500px; position: fixed;">
                 <div class="block_div_no_color" style="margin-top: 0px;">
                     <br/>
@@ -108,6 +108,16 @@
                         Рекомендации
                     </button>
                 </div>
+            </div>
+            <div class="block_div" th:if="${userLogin==null}"
+                 style="margin-top: 50px; margin-left: 0px; width: 230px; height: 500px; position: fixed;">
+                <div class="block_div_no_color" style="margin-top: 0px;">
+                    <br/>
+                    <p class="block_p_no_color p-main-color">Рекомендации</p>
+                </div>
+                <hr class="block_line"/>
+                <p style="text-align: center; margin-left: 5px; margin-right: 5px;" >Вы не зарегистрированы</p>
+                <a class="p-main-color" style="text-align: center; margin-left: 5px; margin-right: 5px;"  href="/new">исправить</a>
             </div>
         </div>
 
